--- a/data/stories.yml
+++ b/data/stories.yml
@@ -55,5 +55,10 @@ stories:
   steps:
     - intent: latest_events
     - action: utter_latest_events
+    - intent: ask_events
+      entities:
+      - latest_event: residence
+    - slot_was_set:
+      - latest_event: residence
+    - action: utter_submit
     - action: action_latest_events
-
