research interests story

--- a/config.yml
+++ b/config.yml
@@ -20,6 +20,10 @@ pipeline:
 
    - name: WhitespaceTokenizer
    - name: RegexFeaturizer
+   - name: RegexEntityExtractor
+     case_sensitive: False
+     use_lookup_tables: True
+     use_regexes: True
    - name: LexicalSyntacticFeaturizer
    - name: CountVectorsFeaturizer
    - name: CountVectorsFeaturizer
