--- a/endpoints.yml
+++ b/endpoints.yml
@@ -25,6 +25,16 @@ action_endpoint:
 #    password: <password used for authentication>
 #    use_ssl: <whether or not the communication is encrypted, default false>
 
+tracker_store:
+    type: SQL
+    dialect: "sqlite"  # the dialect used to interact with the db
+    url: "sqlite:///./LUbot.db"  # (optional) host of the sql db, e.g. "localhost"
+    db: "LUbot.db"  # path to your db
+    username:  # username used for authentication
+    password:  # password used for authentication
+    query: # optional dictionary to be added as a query string to the connection URL
+      driver: my-driver
+
 #tracker_store:
 #    type: mongod
 #    url: <url to your mongo instance, e.g. mongodb://localhost:27017>
