--- a/endpoints.yml
+++ b/endpoints.yml
@@ -28,8 +28,8 @@ action_endpoint:
 tracker_store:
     type: SQL
     dialect: "sqlite"  # the dialect used to interact with the db
-    url: "sqlite:///./LUbot.db"  # (optional) host of the sql db, e.g. "localhost"
-    db: "LUbot.db"  # path to your db
+    url: "sqlite:///./LU_Bot.db"  # (optional) host of the sql db, e.g. "localhost"
+    db: "LU_Bot.db"  # path to your db
     username:  # username used for authentication
     password:  # password used for authentication
     query: # optional dictionary to be added as a query string to the connection URL
